<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">Vocabulary app</string>
  <string name="title_activity_profile">Profile</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Android Studio</string>
  <string name="nav_header_subtitle">android.studio@android.com</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>

  <string name="menu_home">Home</string>
  <string name="menu_gallery">Gallery</string>
  <string name="menu_slideshow">Slideshow</string>

  <string name="home_second">Home Second</string>
  <string name="title_activity_main_screen">MainScreen</string>
  <string name="title_users_tests">My test</string>
  <string name="title_home">Home</string>
  <string name="title_my_vocabulary">My vocabulary</string>

  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="title_activity_main2">Main2Activity</string>
  <string name="congratulations">Congratulations!</string>
  <string name="you_passed_the_test">You Passed The test!</string>
  <string name="score_10_10">"Score: "</string>
  <string name="your_answer">Your answer</string>
  <string name="correct">Correct!</string>
  <string name="your_answer_is_right">Your Answer is right!</string>
  <string name="next_question">Next question</string>
  <string name="questions_in_total">Questions in total:</string>
  <string name="wrong">Wrong!</string>
</resources>