<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.jsonplaceholdertest.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.jsonplaceholdertest.ui.dashboard.DashboardFragment"
        android:label="@string/title_users_tests"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_addTest"
            app:destination="@id/addTest" />
        <action
            android:id="@+id/action_navigation_dashboard_to_nested_graph_test"
            app:destination="@id/nested_graph_test" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.jsonplaceholdertest.ui.notifications.NotificationsFragment"
        android:label="@string/title_my_vocabulary"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/addTest"
        android:name="com.example.jsonplaceholdertest.test.addTest"
        android:label="addTest" />
    <fragment
        android:id="@+id/wordFragment"
        android:name="com.example.jsonplaceholdertest.WordFragment"
        android:label="WordFragment" />
    <include app:graph="@navigation/nested_graph_test" />
</navigation>
